--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "test": "vitest"
     },
     "dependencies": {
+        "framer-motion": "^11.1.5",
         "react": "^18.2.0",
+        "react-canvas-confetti": "^2.0.7",
         "react-dom": "^18.2.0",
         "zustand": "^4.5.2"
     },
